Fix nav color contrast and heading order issues

--- a/client/app/bundles/App/AppTopNavigation/Index.scss
+++ b/client/app/bundles/App/AppTopNavigation/Index.scss
@@ -7,7 +7,7 @@
   .topnav a {
     float: left;
     display: block;
-    color: #007cc3;
+    color: #0075b8;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
